Completed Task 1